# databases_final_project

./: CMakeLists.txt  README.md
documentation/: paper.tex
inc/: abstract_api.hpp  api_actions.hpp  api_command_handler.hpp  api_projects.hpp  api_support.hpp  api_trolls.hpp  api_upvote.hpp  api_votes.hpp  command_handler.hpp  database_executor.hpp  init_command_handler.hpp  init_leader.hpp  query_result.hpp
resources/: drop.sql  examples.txt  init.sql
src/: api_actions.cpp  api_command_handler.cpp  api_projects.cpp  api_support.cpp  api_trolls.cpp  api_upvote.cpp  api_votes.cpp  database_executor.cpp  init_command_handler.cpp  init_leader.cpp  main.cpp  query_result.cpp
